--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-python-telegram-bot==22.5
-pandas==2.2.3
-openpyxl==3.1.5
-python-dotenv==1.0.1
-requests==2.32.3
+python-telegram-bot==20.7
+google-api-python-client==2.136.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.0
+pandas==2.2.2
+python-dateutil==2.9.0.post0
