--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,6 @@ google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.0
 pandas==2.2.2
 python-dateutil==2.9.0.post0
+openpyxl
+requests
 python-dotenv
